unpackaged/main/default/objects/Disaster_Agreement__c/Disaster_Agreement__c.object-meta.xml
<CustomObject>
    <description>Details about the MPA Disaster Contract</description>
    <label>MPA Disaster Contract</label>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>DA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPA Disaster Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>