unpackaged/main/default/objects/Disaster_Agreement__c/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>