unpackaged/main/default/objects/Disaster_Agreement__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Annual Contract Value</label>
    <summarizedField>DA_Product__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>DA_Product__c.Disaster_Agreement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>