unpackaged/main/default/objects/Disaster_Agreement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of the agreement</description>
    <inlineHelpText>End date of the agreement</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>