unpackaged/main/default/objects/Disaster_Agreement__c/fields/Fleet_Central_Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Central_Project_Link__c</fullName>
    <formula>IF(  SAP_Project__c &lt;&gt; NULL, HYPERLINK("https://bdgl.sharepoint.com/sites/FC/Pages/Projects-PHC.aspx?BDGLProject=" &amp;  SAP_Project__c , "Fleet Central Project", "_blank"), HYPERLINK("https://bdgl.sharepoint.com/sites/fc/Pages/Projects.aspx", "Fleet Central Project", "_blank"))</formula>
    <label>Fleet Central Project Link</label>
    <type>Text</type>
</CustomField>