unpackaged/main/default/objects/Disaster_Agreement__c/fields/Legacy_List_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_List_Type__c</fullName>
    <label>Legacy List/Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>