unpackaged/main/default/objects/Disaster_Agreement__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Number of customer locations covered by this agreement</description>
    <inlineHelpText>Number of customer locations covered by this agreement</inlineHelpText>
    <label># of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>