unpackaged/main/default/objects/Disaster_Agreement__c/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <description>Rollup count of the products associated with this account</description>
    <inlineHelpText>Rollup count of the products associated with this account</inlineHelpText>
    <label># of Products</label>
    <summaryForeignKey>DA_Product__c.Disaster_Agreement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>