unpackaged/main/default/objects/Disaster_Agreement__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <label>Payment Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>All at TOD</fullName>
            </value>
            <value>
                <fullName>Partial Pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>