unpackaged/main/default/objects/Disaster_Agreement__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>MPA_Disaster_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>