unpackaged/main/default/objects/Disaster_Agreement__c/fields/Renewal_Status__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Status__c</fullName>
    <label>Renewal Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Renew</fullName>
                <default>true</default>
                <label>Auto Renew</label>
            </value>
            <value>
                <fullName>Non-Auto Renew</fullName>
            </value>
            <value>
                <fullName>Do Not Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>