unpackaged/main/default/objects/Disaster_Agreement__c/fields/SAP_Project__c.field-meta.xml
<CustomField>
    <fullName>SAP_Project__c</fullName>
    <label>SAP Project #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>