unpackaged/main/default/objects/Disaster_Agreement__c/fields/SF_Contract__c.field-meta.xml
<CustomField>
    <fullName>SF_Contract__c</fullName>
    <label>SF Contract #</label>
    <length>30</length>
    <type>Text</type>
</CustomField>