unpackaged/main/default/objects/Disaster_Agreement__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start date for this contract</description>
    <inlineHelpText>The start date for this contract</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>