unpackaged/main/default/objects/Disaster_Agreement__c/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <description>Annual Contract Value multiplied by Term</description>
    <formula>Contract_Value__c  *  Term__c / 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Contract Value multiplied by Term</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>