unpackaged/main/default/objects/Disaster_Agreement__c/listViews/Active_Agreements.listView-meta.xml
<ListView>
    <fullName>Active_Agreements</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Number_of_Locations__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Renewal_Status__c</columns>
    <columns>SAP_Project__c</columns>
    <columns>SF_Contract__c</columns>
    <columns>Term__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Contracts</label>
</ListView>