unpackaged/main/default/objects/Disaster_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Locations__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Renewal_Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>SAP_Project__c</columns>
    <columns>SF_Contract__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Term__c</columns>
    <columns>Primary_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>